[gd_scene load_steps=28 format=2]

[ext_resource path="res://Mendel.gd" type="Script" id=1]
[ext_resource path="res://Data/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icons8-settings-96.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
draw_center = false

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.654902, 0.654902, 0.654902, 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.388235, 0.388235, 0.388235, 1 )
border_width_left = 6

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=18]
draw_center = false

[sub_resource type="DynamicFont" id=19]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=24]
size = 32
font_data = ExtResource( 2 )

[node name="Alles" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info1" type="Label" parent="."]
margin_left = 30.0
margin_top = 150.0
margin_right = 350.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Genotypen der 
Parentalgeneration"

[node name="Elter1" type="LineEdit" parent="."]
margin_left = 400.0
margin_top = 144.0
margin_right = 700.0
margin_bottom = 189.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Elter2" type="LineEdit" parent="."]
margin_left = 400.0
margin_top = 190.0
margin_right = 700.0
margin_bottom = 235.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Kreuzungsschema" type="ItemList" parent="."]
margin_left = 50.0
margin_top = 300.0
margin_right = 950.0
margin_bottom = 1000.0
custom_styles/selected_focus = SubResource( 5 )
custom_styles/bg_focus = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/guide_color = Color( 0.423529, 0.423529, 0.423529, 1 )
custom_colors/font_color_selected = Color( 0.905882, 0.905882, 0.905882, 1 )
custom_colors/font_color = Color( 0.905882, 0.905882, 0.905882, 1 )
max_text_lines = 6
max_columns = 6
fixed_column_width = 130

[node name="Mendel" type="Button" parent="."]
margin_left = 800.0
margin_top = 190.0
margin_right = 956.0
margin_bottom = 235.0
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mendel!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error_Label" type="Label" parent="."]
margin_left = 48.0519
margin_top = 300.0
margin_right = 948.052
margin_bottom = 1000.0
custom_fonts/font = SubResource( 11 )

[node name="Info 3" type="Label" parent="."]
margin_left = 1040.72
margin_top = 149.642
margin_right = 1400.72
margin_bottom = 230.642
custom_fonts/font = SubResource( 12 )
text = "Geno- / Phänotypen
der Filialgeneration"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 988.0
margin_right = 1029.0
margin_bottom = 1080.0
custom_styles/separator = SubResource( 13 )

[node name="Genotypen_" type="CheckBox" parent="."]
margin_left = 1400.0
margin_top = 150.0
margin_right = 1420.0
margin_bottom = 190.0
rect_scale = Vector2( 2, 2 )
custom_styles/focus = SubResource( 14 )
pressed = true

[node name="P1" type="Label" parent="."]
margin_left = 730.0
margin_top = 150.0
margin_right = 770.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 15 )
text = "P1"

[node name="P2" type="Label" parent="."]
margin_left = 730.0
margin_top = 190.0
margin_right = 770.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 15 )
text = "P2"

[node name="Genotypen" type="Label" parent="."]
margin_left = 1040.0
margin_top = 300.0
margin_right = 1087.45
margin_bottom = 329.547
custom_fonts/font = SubResource( 16 )
text = "Genotypen:"

[node name="Phaenotypen" type="Label" parent="."]
margin_left = 1500.0
margin_top = 300.0
margin_right = 1550.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 17 )
text = "Phänotypen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multigen" type="CheckBox" parent="."]
margin_left = 954.507
margin_right = 978.507
margin_bottom = 1.0
rect_scale = Vector2( 2, 2 )
custom_styles/focus = SubResource( 18 )
custom_fonts/font = SubResource( 19 )

[node name="Info2" type="Label" parent="."]
margin_left = 631.895
margin_right = 950.0
margin_bottom = 82.1052
custom_fonts/font = SubResource( 20 )
text = "Multigenerationelle
berechnung"
align = 1

[node name="MultiGen" type="Button" parent="."]
margin_left = 800.0
margin_top = 190.0
margin_right = 956.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 21 )
text = "Multigen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generationen" type="LineEdit" parent="."]
margin_left = 800.0
margin_top = 236.0
margin_right = 956.0
margin_bottom = 281.0
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 800.0
margin_top = 144.0
margin_right = 956.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenSettings" type="Button" parent="."]
margin_right = 108.0
margin_bottom = 102.0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Mendel" to="." method="_on_Mendel_pressed"]
[connection signal="button_down" from="Multigen" to="." method="_on_Multigen_button_down"]
[connection signal="button_up" from="Multigen" to="." method="_on_Multigen_button_up"]
[connection signal="pressed" from="Multigen" to="." method="_on_Multigen_pressed"]
[connection signal="pressed" from="MultiGen" to="." method="_on_MultiGen_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="OpenSettings" to="." method="_on_Button_pressed"]
